--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-  <div class="matrix-information">
+  <div class="info">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <div id="top-section-for-adding-element-to-list">
+  <div class="main">
+    <div>
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="task-row">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </div>
     <h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <ul id="incompleted">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -43,7 +43,7 @@
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="completed">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
