--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body class="page">
-  <div class="info">
+  <header class="info">
     <img src="./eisenhower-matrix.jpg" class="info-img">
     <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <div>
+  </header>
+  <main class="main">
+    <section>
       <label for="new-task" class="new-task-label">Add Item</label>
       <div class="task-row">
         <input id="new-task" class="task add-task" type="text">
         <button class="add">Add</button>
       </div>
-    </div>
+    </section>
     <h3 class="list-heading">Todo</h3>
     <ul id="incompleted">
       <li class="list">
@@ -54,7 +54,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
