refactor: add alt attributes in img tags according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
   <header class="info">
-    <img src="./eisenhower-matrix.jpg" class="info-img">
+    <img src="./eisenhower-matrix.jpg" class="info-img" alt="Eisenhower matrix picture">
     <a class="info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -29,7 +29,7 @@
         <input type="text" class="add-task task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove task button">
         </button>
       </li>
       <li class="edit-mode list">
@@ -38,7 +38,7 @@
         <input type="text" value="Go Shopping" class="task add-task task-input">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove task button">
         </button>
       </li>
     </ul>
@@ -50,7 +50,7 @@
         <input type="text" class="task add-task task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove task button">
         </button>
       </li>
     </ul>
